--- a/Meteora/style.css
+++ b/Meteora/style.css
@@ -24,6 +24,22 @@
     color: #DAFF01;
 }
 
-.cor-produtos {
-    background-color: #9353FF;
+.botao-lilas {
+    background-color: #9353FF !important; /* !important tag to override default properties in Bootstrap */
+}
+
+.carousel-caption {
+    top: 50%;
+    transform: translateY(-30%);
+    bottom: initial;
+}
+
+.carousel-title {
+    text-align: center;
+    font-feature-settings: 'clig' off, 'liga' off;
+    /* Basic Typography/Display 3 */
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal; 
 }
